# Stocks

./: .gitignore  30mMO1-3.py  AAPL_info.csv  LICENSE  Makefile  README.md  analyze_stock.py  archive_plot_stock.py  average_spread.py  backtest.py  backtest_filters.py  bk.py  bkt.py  btfd.py  current_price.py  dumb.py  eldorado.py  eldoradoBacktest.py  eldoradoPredictions.py  eldoradotoptrades.py  fetch_daily_5m_bars.py  fetch_stock.py  fetch_stock_info.py  fetch_us_stocks.py  filter_by_market_cap.py  fric_monc_trade.py  fric_mono_trade.py  friday_monday_3.py  gapDetector.py  indicators.py  list_current_metrics.py  morning_range.py  neverland.py  open_close.py  open_range.py  open_range_break.py  plot_stock.py  portfolio_compare.py  portfolio_utils.py  position_size.py  (+11 more)
Marvin/: TMVNMaxwellBaseWWords2019.stl
app/: Home.py
app/components/: filters.py  numeric_inputs.py
app/pages/: 1_Dashboard.py  2_Screener.py  3_Taygetus.py
chatlogs/: Filter.txt
cli/: build_cache.py  eldorado_backtest.py  taygetus_backtest.py
extension/: background.js  manifest.json
portfolios/: 10mMO  120mMO  150mMO  15mMO  180mMO  180mMO-S  20mMO  20mMO-L  20mMO-MJ  20mMO-S  210mMO  25mMO  25mMO-S  25mMO-XS  270mMO  300mMO  30mMO  30mMO-L  30mMO-S  30mMO-XL  30mMO-XS  40mMO  45mMO  5mMO  5mMO-L  60mMO  75mMO  90mMO  A.txt  B.txt  BQ.txt  M9.txt  N.txt  N2.txt  Noon  Noon.txt  REMOVE  T1  T100.txt  T2  (+25 more)
stocks/: __init__.py
stocks/backtests/: eldorado.py  (+2 more)
tests/: test_eldorado.py  test_equity_curve.py  test_fetch.py  test_gap_detector.py  test_portfolio_utils.py  test_taygetus.py
(+4 files in other folders)
